--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* font-family: 'Noto Serif', serif;
+font-family: 'Roboto', sans-serif; */
+
+
 * {
   margin: 0;
   padding: 0;
@@ -23,6 +27,11 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.4;
 }
+
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Noto Serif', serif;
+}
+
 h1 {
   font-size: 3em;
   line-height: 1;
@@ -51,6 +60,10 @@ h6 {
   font-size: 1em;
   font-weight: bold;
   margin-bottom: 1.5em;
+}
+
+p{
+  font-family: 'Roboto', sans-serif;
 }
 
 .btn-primary {
